# eventReaderRoot

./: AcqdStart.cxx  AcqdStart.h  Adu5Pat.cxx  Adu5Sat.cxx  Adu5Sat.h  Adu5Vtg.cxx  AnitaClock.h  AnitaConventions.cxx  AnitaConventions.h  AnitaDataset.cxx  AnitaDataset.h  AnitaEventCalibrator.cxx  AnitaEventCalibrator.h  AnitaGeomTool.cxx  AnitaGeomTool.h  AnitaPacketUtil.cxx  AnitaPacketUtil.h  AveragedSurfHk.cxx  AveragedSurfHk.h  CMakeLists.txt  CalibratedAnitaEvent.cxx  CalibratedAnitaEvent.h  CalibratedHk.cxx  CalibratedHk.h  CalibratedSSHk.cxx  CalibratedSSHk.h  CommandEcho.cxx  CommandEcho.h  G12Sat.cxx  G12Sat.h  GpsGga.cxx  GpsdStart.cxx  GpuPowerSpectra.cxx  LinkDef.h  LogWatchdStart.h  Makefile  Makefile.legacy  Makefile.linux  MonitorHk.cxx  MonitorHk.h  (+34 more)
R4.0/: Adu5Pat.cxx  Adu5Pat.h  AnitaConventions.cxx  AnitaGeomTool.h  LinkDef.h  PrettyAnitaHk.h  RawAnitaHeader.cxx  RawDataReader.h  SurfHk.h  TurfRate.cxx  TurfRate.h  sillyFriendChainExample.C
R4.0/macros/: fitSquareWave.C  getTimingResolutionFromClocks.C  oopsIMessedUp.C  plotSquareWave.C  plotZC.C  runGetClockPeriod.C  runPlotTestSurf.C  searchForMissingEvs.C  stephenTimeTest.C
R4.1/: Adu5Pat.h  Adu5Sat.h  CommandEcho.cxx  G12Sat.h  GpsGga.h  GpsdStart.h  RawAnitaEvent.cxx  RawAnitaHeader.h  SurfHk.h  TimedAnitaHeader.h  TurfRate.h  readRawData.cxx
R4.2/: RawAnitaEvent.cxx  SurfHk.h  UsefulAnitaEvent.cxx
R4.2.1/: AnitaConventions.cxx  AnitaGeomTool.cxx  Makefile  RawAnitaHeader.h  UsefulAnitaEvent.cxx  readRawData.cxx
R4.2.1/calib/: quickFillCalibFile.C
R4.2.1/macros/: plotClockAutoCor.C
R4.2/calib/: antennaPositionTables.csv
R4.2/macros/: runFitSquareWave.C
R4.3/: Adu5Pat.h  AveragedSurfHk.cxx  LinkDef.h  RawDataReader.cxx
R4.3/calib/: rfcmCalibFile.txt
R4.3/doc/: footer.html
R4.3/macros/: crossCorClocks.C
R4.4/: AnitaConventions.h  AnitaEventCalibrator.cxx  AnitaEventCalibrator.h  CalibratedHk.h  SlowRate.cxx  TurfRate.cxx  UsefulAnitaEvent.cxx  printStructSizes.cxx
R4.4/macros/: plotAllClocks.C  plotClockPeriods.C  plotThisClockEvent.C  runGetEvent.C
calib/: 290K.C  anita3OverwrittenEventInfo.txt  anitaIIPhotogrammetry.csv  hiCal1EventNumbers.txt  hiCal1EventNumbers13Jan2018.txt  makeHPolCalibFile.C  makeSimonPositionFile.C  process290K.C  runToEvA4.txt  simpleVoltageCalibrationAnita4.txt  timerunmap_3.txt  timerunmap_4.txt
doc/: Doxyfile  customdoxygen.css  doxynew.config  footer.html  header.html
eventReaderRoot/trunk/: AcqdStart.cxx  AcqdStart.h  Adu5Pat.h  Adu5Sat.cxx  Adu5Sat.h  Adu5Vtg.cxx  AnitaClock.h  AnitaConventions.cxx  AnitaConventions.h  AnitaDataset.cxx  AnitaDataset.h  AnitaEventCalibrator.cxx  AnitaEventCalibrator.h  AnitaGeomTool.cxx  AnitaGeomTool.h  AnitaPacketUtil.cxx  AnitaPacketUtil.h  AveragedSurfHk.cxx  AveragedSurfHk.h  CalibratedAnitaEvent.cxx  CalibratedAnitaEvent.h  CalibratedHk.cxx  CalibratedHk.h  CalibratedSSHk.h  CommandEcho.cxx  G12Pos.cxx  G12Sat.cxx  GpsGga.cxx  GpsGga.h  GpsdStart.h  LinkDef.h  LogWatchdStart.cxx  Makefile  Makefile.arch  (+32 more)
include/: AcqdStart.h  Adu5Sat.h  Adu5Vtg.h  AnalysisBlinding.h  AnitaConventions.h  AnitaDataset.h  AnitaEventCalibrator.h  AnitaFlightInfo.h  AnitaGeomTool.h  AnitaPacketUtil.h  AnitaVersion.h  AveragedSurfHk.h  CalibratedAnitaEvent.h  CalibratedHk.h  CommandEcho.h  G12Pos.h  GpuPowerSpectra.h  LogWatchdStart.h  MonitorHk.h  RTLSpectrum.h  RawAnitaEvent.h  RawAnitaHeader.h  RawDataReader.h  RawHk.h  RawSSHk.h  RingBuffer.h  SlowRate.h  SummedTurfRate.h  SurfHk.h  TimedAnitaHeader.h  TruthAnitaEvent.h  TuffNotchStatus.h  TuffRawCmd.h  TurfRate.h  TurfRegisterContents.h  UsefulAnitaEvent.h  anitaCommand.h  oldStructs.h  simpleStructs.h
jiwoo_timecode/: anita_surf_time_constant_differeniial.txt  anita_surf_time_constant_epsilon.txt  anita_surf_time_constant_rco_delay.txt  wave.c
macros/: GPSresolution.C  ableGui.C  alfa_example.py  anitaNewPlotter.cxx  anomalous.C  decimateData.cxx  deltaTest.C  dontFitSquareWave.C  dumpHKToAscii.C  exampleLoopAllEvents.C  findLiveTime.C  findPriority9.C  findUsableTime.C  findWaisRuns.C  fitSquareWave.C  getClockPeriod.C  getL2OverUnder.C  gpuFile264.root  justReadEvent.C  makeEventHeadFileFromHeadFile.C  makeJustBinCalibFile.C  oindree_ML.C  oindree_blast.C  oindree_blast_wais.C  oindree_dc_offset.C  oindree_dig_saturation.C  oindree_min_signal.C  oindree_num_points.C  oindree_pulse_asymm.C  oindree_read_header.C  oindree_read_mon.C  oindree_read_surf.C  oindree_reverse_blast.C  oindree_tuff_performance.C  plotAllClocks.C  plotClockChannels.C  plotDisconeBiconce.C  plotOneSurf.C  plotOneSurfCompile.C  plotOneSurfForTesting.C  (+22 more)
scripts/: numpyfy.py
src/: AcqdStart.cxx  Adu5Pat.cxx  Adu5Sat.cxx  Adu5Vtg.cxx  AnalysisBlinding.cxx  AnitaConventions.cxx  AnitaDataset.cxx  AnitaEventCalibrator.cxx  AnitaFlightInfo.cxx  AnitaGeomTool.cxx  AnitaPacketUtil.cxx  AnitaVersion.cxx  AveragedSurfHk.cxx  CalibratedAnitaEvent.cxx  CalibratedHk.cxx  CalibratedSSHk.cxx  CommandEcho.cxx  G12Pos.cxx  G12Sat.cxx  GpsGga.cxx  GpsdStart.cxx  GpuPowerSpectra.cxx  LogWatchdStart.cxx  MonitorHk.cxx  OtherMonitorHk.cxx  PrettyAnitaHk.cxx  RTLSpectrum.cxx  RawAnitaEvent.cxx  RawAnitaHeader.cxx  RawDataReader.cxx  RawHk.cxx  RawSSHk.cxx  RingBuffer.cxx  RunStart.cxx  SlowRate.cxx  SummedTurfRate.cxx  SurfHk.cxx  TimedAnitaHeader.cxx  TruthAnitaEvent.cxx  TuffNotchStatus.cxx  (+3 more)
test/: exampleDumpHk.cxx  exampleEventLoop.cxx  printStructSizes.cxx  readRawData.cxx  readRootData.cxx
(+205 files in other folders)
